infra/cron-cam-contact-services/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: cron-cam-contact-services
 annotations:
   konghq.com/strip-path: 'true'
   cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
 tls:
 - hosts:
   - qa-api.thesweetspot.cloud
   secretName: sweetspot-tls
 ingressClassName: kong
 rules:
 - host: qa-api.thesweetspot.cloud
   http:
     paths:
     - path: /cron-cam-contact-services
       pathType: ImplementationSpecific
       backend:
         service:
           name: cron-cam-contact-services-service
           port:
             number: 8080
